Finished closed club

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -118,12 +118,12 @@
         "What the?"
       ],
       "posenorm": [
-        "seems a bit at a loss, but she gamely turns slightly, sticks out her hip, and looks straight at you with a hand on her hip.",
-        "thinks a bit, turns her back to you, sticks out her chest and looks back over her shoulder, blowing you a kiss.",
-        "bends slightly at the waist with both hands on her hips, her butt sticking out and breasts hanging.",
-        "seductively turns and caresses her breast with one hand and her firm ass with the other.",
-        "grabs a chair and sits backwards, her legs spread wide open around the back, tight jeans showing every detail of her crotch.",
-        "seductively turns her back, bends over, and peels down her tight jeans just a little to give you a panty shot."],
+        "girlname seems a bit at a loss, but she gamely turns slightly, sticks out her hip, and looks straight at you with a hand on her hip.",
+        "girlname thinks a bit, turns her back to you, sticks out her chest and looks back over her shoulder, blowing you a kiss.",
+        "girlname bends slightly at the waist with both hands on her hips, her butt sticking out and breasts hanging.",
+        "girlname seductively turns and caresses her breast with one hand and her firm ass with the other.",
+        "girlname grabs a chair and sits backwards, her legs spread wide open around the back, tight jeans showing every detail of her crotch.",
+        "girlname seductively turns her back, bends over, and peels down her tight jeans just a little to give you a panty shot."],
       "poseoutfit": [
         "her jeans and t-shirt",
         "wedding dress",
@@ -138,11 +138,22 @@
         "She pulls the straps from her shoulders and peels the swimsuit down her legs.  Without stopping to pull her underwear back on, she steps first into the short shorts, and then pulls the tight halter top on over her head.  Her nipples show through the halter top, and you catch a glimpse of pink up the loose crotch of her shorts as she turns to look at you.",
         "She drops her shorts without even unzipping them and quickly wraps the grass skirt around her waist.  The coconuts quickly replace her halter top giving you a glimpse of her erect nipples before she turns towards you again."],
       "donemer": [
-        "She quickly slips out of her t-shirt, working her hips to keep her bladder under control, then pulls her tight jeans down around her ankles and quickly steps out.  Lifting the wedding dress above her head, she burrows into the white pile of fabric and you see her legs running in place under a plume of white lace until her head emerges from the top and she jams her hands into the fabric about where you expect her crotch to be.  As the spasm subsides, she reaches around to zip up the tight zipper and turns to look for your approval, breathing hard.",
-        "She unzips the confining wedding dress and steels herself before she steps out of it, dancing around a bit before picking up the pair of jeans.  Turning her back to you, she bends over and steps into the jeans, pulling them over her hips and squirming them into place.  They are a tight fit, made even tighter against her swollen bladder when she pulls up the zipper and fastens the clasp with a gasp of effort.  She rubs her crotch through the thin fabric a couple of times and then removes her hands to slip the tanktop over her head moments later and she's set.  The bulge of her bladder and the mound of her pussy strain at the thin fabric.",
-        "She quickly pulls off the tank top and then unclasps the jeans with a sigh of relief.  Unzipped and peel off quickly, the wadded up jeans are jammed between her legs for a few moments before being thrown to the side.  Breathing heavily, she removes her undergarments and stands completely nude for a moment before stepping into the top of the swimsuit and pulling the straps over her shoulders, strething the thin fabric into her crotch.  It's as if the suit actually makes the curve of her full bladder and lines of her straining pussy even more visible than when she was nude.",
-        "She tries to pull the straps from her shoulders with one hand while the other massages her crotch, but eventually has to free both hands to peel the swimsuit down her legs.  Without stopping to pull her underwear back on, she steps first into the short shorts, and then pulls the tight halter top on over her head.  Her nipples show through the halter top, and she pulls up on the shorts until the crotch puts pressure on her pussy.  The pink skin and curly hair overflow past the thin straining fabric of the crotch.",
-        "She drops her shorts without even unzipping them and quickly wraps the grass skirt around her waist.  She grabs a handfull of the grass in a fist and jams it into her crotch for a moment before the coconuts replace her halter top and she stands there swaying back and forth."],
+        [
+          "She quickly slips out of her t-shirt, working her hips to keep her bladder under control, then pulls her tight jeans down around her ankles and quickly steps out.  Lifting the wedding dress above her head, she burrows into the white pile of fabric and you see her legs running in place under a plume of white lace until her head emerges from the top.",
+          "She jams her hands into the fabric about where you expect her crotch to be. As the spasm subsides, she reaches around to zip up the tight zipper and turns to look for your approval, breathing hard."
+        ],
+        [
+          "She unzips the confining wedding dress and steels herself before she steps out of it, dancing around a bit before picking up the pair of jeans.  Turning her back to you, she bends over and steps into the jeans, pulling them over her hips and squirming them into place.",
+          "They are a tight fit, made even tighter against her swollen bladder when she pulls up the zipper and fastens the clasp with a gasp of effort.  She rubs her crotch through the thin fabric a couple of times and then removes her hands to slip the tanktop over her head moments later and she's set.  The bulge of her bladder and the mound of her pussy strain at the thin fabric."
+        ],
+        [
+          "She quickly pulls off the tank top and then unclasps the jeans with a sigh of relief.  Unzipped and peel off quickly, the wadded up jeans are jammed between her legs for a few moments before being thrown to the side.",
+          "Breathing heavily, she removes her undergarments and stands completely nude for a moment before stepping into the top of the swimsuit and pulling the straps over her shoulders, stretching the thin fabric into her crotch.  It's as if the suit actually makes the curve of her full bladder and lines of her straining pussy even more visible than when she was nude."
+        ],
+        [ "She tries to pull the straps from her shoulders with one hand while the other massages her crotch, but eventually has to free both hands to peel the swimsuit down her legs.  Without stopping to pull her underwear back on, she steps first into the short shorts, and then pulls the tight halter top on over her head.",
+          "Her nipples show through the halter top, and she pulls up on the shorts until the crotch puts pressure on her pussy.  The pink skin and curly hair overflow past the thin straining fabric of the crotch."
+        ],
+        ["She drops her shorts without even unzipping them and quickly wraps the grass skirt around her waist.  She grabs a handful of the grass in a fist and jams it into her crotch for a moment before the coconuts replace her halter top and she stands there swaying back and forth."]],
       "fillchampok": [
         "She carefully fills the champagne flutes, pressing her body up to yours.",
         "She fills your flute, and then hers, catching a drip on her finger and sensously licking it off.",
@@ -252,16 +263,16 @@
         "Her mons is burning, and she grinds it firmly back into you.",
         "You feel the top of her butt crack drenched in sweat."],
       "posenorm": [
-        "seems a bit at a loss, but she gamely turns slightly, sticks out her hip, and looks straight at you with a hand on her hip.",
-        "thinks a bit, turns her back to you, sticks out her chest and looks back over her shoulder, blowing you a kiss.",
-        "bends slightly at the waist with both hands on her hips, her butt sticking out and breasts hanging.",
-        "seductively turns and caresses her breast with one hand and her firm ass with the other.",
-        "grabs a chair and sits backwards, her legs spread wide open around the back.",
-        "seductively turns her back, bends over, and flips up the back of her skirt to give you a panty shot."],
+        "girlname seems a bit at a loss, but she gamely turns slightly, sticks out her hip, and looks straight at you with a hand on her hip.",
+        "girlname thinks a bit, turns her back to you, sticks out her chest and looks back over her shoulder, blowing you a kiss.",
+        "girlname bends slightly at the waist with both hands on her hips, her butt sticking out and breasts hanging.",
+        "girlname seductively turns and caresses her breast with one hand and her firm ass with the other.",
+        "girlname grabs a chair and sits backwards, her legs spread wide open around the back.",
+        "girlname seductively turns her back, bends over, and flips up the back of her skirt to give you a panty shot."],
       "poseoutfit": [
         "her skirt and blouse",
         "wedding dress",
-        "pair of tight jeans and a tanktop",
+        "pair of tight jeans and a tank-top",
         "one piece swimsuit",
         "pair of short shorts and a halter top",
         "grass hula skirt with a coconut bra"],
