Added setting to turn off disclaimer on subsequent visits. Bug fixes on the sex scenes

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -228,7 +228,7 @@
       "sextoskirtquoteemer": "The bulge of her overfull bladder is stretching out the waistband of her skin-tight jeans and making the zipper difficult to operate.",
       "sexskirtpanties": "You unzip and tug down her skin-tight jeans to reveal her {0} panties beneath.",
       "sexskirtnone": "You unzip and pull down her skin-tight jeans like you were unwrapping a present.  Beneath them you find her curly pubes and nothing else.",
-      "sexpantieskirt": "You reach down the back of her tight jeans and try to tug her panties out, but they seem to be stuck.",
+      "sexPantieTOSkirt": "You reach down the back of her tight jeans and try to tug her panties out, but they seem to be stuck.",
       "swimstripquote":" is already peeling off her t-shirt and jeans.",
       "swimstripquotebare": "She hesitates a second and then removes her lacy bra.  She stands completely naked, but it's difficult to see much in the warm darkness.",
       "swimstripquotepanties": "She hesitates a second and then removes her lacy bra, leaving her {0} panties on."
@@ -364,7 +364,7 @@
       "sexskirtquoteemer" : "The bulge of her overfull bladder is stretching out her skirt on top and making the zipper difficult to operate.",
       "sexskirtpanties" : "You unzip and tug down her skirt to reveal her {0} panties beneath.",
       "sexskirtnone" : "You unzip and pull down her skirt like you were unwrapping a present.  Beneath it you find her curly pubes and nothing else.",
-      "sexpantiesskirt" : "You reach up under her skirt and try to tug her panties down, but they seem to be stuck.",
+      "sexPantiesTOSkirt" : "You reach up under her skirt and try to tug her panties down, but they seem to be stuck.",
       "swimstripquote" : " is already peeling off her blouse and skirt.",
       "swimstripquotebare" : "She hesitates a second and then removes her lacy bra.  She stands completely naked, but it's difficult to see much in the warm darkness.",
       "swimstripquotepanties" : "She hesitates a second and then removes her lacy bra, leaving her {0} panties on."
