--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -222,16 +222,17 @@
       "sextThigh": "You slip your hand between her legs and slide it up her inner thighs, feeling the smooth fabric of her jeans.",
       "sextAssskirt": "You massage her ass through the thin fabric of her tight jeans.",
       "sextAsspanties": "You rub her ass though the silky fabric of her panties.",
-      "sextPussy": "You reach between her legs and massage her pussy through the thin fabric of her skin-tight jeans and panties.",
-      "sexkThigh": "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her tight jeans.",
-      "sexkPussy": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
+      "sextPussyskirtpanties": "You reach between her legs and massage her pussy through the thin fabric of her skin-tight jeans and panties.",
+      "sextPussyskirtnotpanties": "You reach between her legs and massage her pussy through the fabric of her skin-tight jeans.",
+      "sexkThighskirt": "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her tight jeans.",
+      "sexkPussyskirt": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
       "sextoskirtquoteemer": "The bulge of her overfull bladder is stretching out the waistband of her skin-tight jeans and making the zipper difficult to operate.",
-      "sexskirtpanties": "You unzip and tug down her skin-tight jeans to reveal her {0} panties beneath.",
+      "sexskirtpanties": "You unzip and tug down her skin-tight jeans to reveal her pantyColor panties beneath.",
       "sexskirtnone": "You unzip and pull down her skin-tight jeans like you were unwrapping a present.  Beneath them you find her curly pubes and nothing else.",
       "sexPantieTOSkirt": "You reach down the back of her tight jeans and try to tug her panties out, but they seem to be stuck.",
       "swimstripquote":" is already peeling off her t-shirt and jeans.",
       "swimstripquotebare": "She hesitates a second and then removes her lacy bra.  She stands completely naked, but it's difficult to see much in the warm darkness.",
-      "swimstripquotepanties": "She hesitates a second and then removes her lacy bra, leaving her {0} panties on."
+      "swimstripquotepanties": "She hesitates a second and then removes her lacy bra, leaving her pantyColor panties on."
     },
     "skirt": {
       "thighresp": [
@@ -358,9 +359,10 @@
       "sextThigh" : "You slip your hand under her skirt and slide it up her inner thighs.",
       "sextAssskirt" : "You massage her ass through the thin fabric of her skirt.",
       "sextAsspanties": "You rub her ass though the silky fabric of her panties.",
-      "sextPussy" : "You reach under her skirt and massage her pussy through the thin fabric of her panties.",
-      "sexkThigh" : "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her skirt.",
-      "sexkPussy" : "You bury your face in her lap in a vain attempt to stretch her skirt, but instead you just put pressure on her bladder.",
+      "sextPussyskirtpanties" : "You reach under her skirt and massage her pussy through the thin fabric of her panties.",
+      "sextPussyskirtnotpanties": "You reach under her skirt and massage her pussy.",
+      "sexkThighskirt" : "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her skirt.",
+      "sexkPussyskirt" : "You bury your face in her lap in a vain attempt to stretch her skirt, but instead you just put pressure on her bladder.",
       "sexskirtquoteemer" : "The bulge of her overfull bladder is stretching out her skirt on top and making the zipper difficult to operate.",
       "sexskirtpanties" : "You unzip and tug down her skirt to reveal her {0} panties beneath.",
       "sexskirtnone" : "You unzip and pull down her skirt like you were unwrapping a present.  Beneath it you find her curly pubes and nothing else.",
