--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -225,7 +225,7 @@
       "sextPussyskirtpanties": "You reach between her legs and massage her pussy through the thin fabric of her skin-tight jeans and panties.",
       "sextPussyskirtnotpanties": "You reach between her legs and massage her pussy through the fabric of her skin-tight jeans.",
       "sexkThighskirt": "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her tight jeans.",
-      "sexkPussyskirt": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
+      "sexkPussy": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
       "sextoskirtquoteemer": "The bulge of her overfull bladder is stretching out the waistband of her skin-tight jeans and making the zipper difficult to operate.",
       "sexskirtpanties": "You unzip and tug down her skin-tight jeans to reveal her pantyColor panties beneath.",
       "sexskirtnone": "You unzip and pull down her skin-tight jeans like you were unwrapping a present.  Beneath them you find her curly pubes and nothing else.",
