--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -54,7 +54,7 @@
             "You look longingly at her short skirt, imagining your hands grasping her waist, pulling at the zipper and peeling it off her to reveal what's underneath, but catch yourself staring too long and force yourself to reconnect with the real world.  You quickly suppress the thought and try to pay attention."]
         }
     },
-    "Mellissa":{
+    "Melissa":{
       "stareather": {
         "jeans": [
           "You find yourself distracted by her trim ass, and thoughts of x-ray vision fill your head until you pull yourself back to reality.",
