Refactored the pickup scene according to the new format

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -196,7 +196,7 @@
       "peeoutsidebquotebare": "She rips down her jeans, revealing her bare crotch.  She carefully squats, quickly glancing around to make sure she's really not being watched.",
       "wetherselfquote": "She takes off her jeans and slowly peels her soaked  {0} panties down her dripping legs, holding them daintily between her thumb and forefinger.",
       "firstmtgquote": " greets you at the door.  She's wearing a pair of tight blue jeans and an even tighter black form-fitting t-shirt.",
-      "firstmtgtightquote": "The jeans are so tight you can see the outlines of her {0} panties.",
+      "firstmtgtightquote": "The jeans are so tight you can see the outlines of her pantyColor panties.",
       "firstmtgtightquotebare": "You don't see any pantylines, despite the skin-tight jeans.",
       "soakedseatquote": "She nervously brushes at her jeans before she gingerly sits on the soaked passenger seat.",
       "peeprepquote": "She squirms out of her jeans and pulls her panties down with them.",
