Fixed typo in Jennifer's name breaking things if she is chosen. Changed layout of the backpack to hopefully stop text to no longer appear outside the text-box

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -36,7 +36,7 @@
           "You look longingly at her short skirt, imagining your hands grasping her waist, pulling at the zipper and peeling it off her, then running down and cupping her beautiful ass, but catch yourself staring too long and force yourself to reconnect with the real world.  You quickly suppress the thought and try to pay attention."]
       }
     },
-    "Jeniffer": {
+    "Jennifer": {
         "stareather": {
           "jeans": [
             "You find yourself distracted by her full, supple ass, and thoughts of x-ray vision fill your head until you pull yourself back to reality.",
