Tweaked the restrictions on when you can use items. They should be complete now

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -225,7 +225,8 @@
       "sextPussyskirtpanties": "You reach between her legs and massage her pussy through the thin fabric of her skin-tight jeans and panties.",
       "sextPussyskirtnotpanties": "You reach between her legs and massage her pussy through the fabric of her skin-tight jeans.",
       "sexkThighskirt": "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her tight jeans.",
-      "sexkPussy": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
+      "sexkPussyskirt": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
+      "sexkPussypanties": "You lay your face in her lap and tongue her pussy though the silky wet fabric of her panties.",
       "sextoskirtquoteemer": "The bulge of her overfull bladder is stretching out the waistband of her skin-tight jeans and making the zipper difficult to operate.",
       "sexskirtpanties": "You unzip and tug down her skin-tight jeans to reveal her pantyColor panties beneath.",
       "sexskirtnone": "You unzip and pull down her skin-tight jeans like you were unwrapping a present.  Beneath them you find her curly pubes and nothing else.",
@@ -362,6 +363,7 @@
       "sextPussyskirtpanties" : "You reach under her skirt and massage her pussy through the thin fabric of her panties.",
       "sextPussyskirtnotpanties": "You reach under her skirt and massage her pussy.",
       "sexkThighskirt" : "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her skirt.",
+      "sexkPussypanties": "You lay your face in her lap and tongue her pussy though the silky wet fabric of her panties.",
       "sexkPussyskirt" : "You bury your face in her lap in a vain attempt to stretch her skirt, but instead you just put pressure on her bladder.",
       "sexskirtquoteemer" : "The bulge of her overfull bladder is stretching out her skirt on top and making the zipper difficult to operate.",
       "sexskirtpanties" : "You unzip and tug down her skirt to reveal her {0} panties beneath.",
