Bug fixes for peeing scenes

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -192,7 +192,7 @@
       "peechampquotebare": "She grabs the champagne glass and and quickly rips down her tight jeans, holding the edge of the glass against her bare pussy.",
       "peeoutsidequote": "She steps gingerly out of the car drops her tight jeans and {0} panties down around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
       "peeoutsidequotebare": "She hops quickly out of the car and drops her tight jeans, revealing her bare crotch.  She carefully squats, quickly glancing around to make sure she's really not being watched.",
-      "peeoutsidebquote": "She pulls down her jeans and {0} panties around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
+      "peeoutsidebquote": "She pulls down her jeans and pantyColor panties around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
       "peeoutsidebquotebare": "She rips down her jeans, revealing her bare crotch.  She carefully squats, quickly glancing around to make sure she's really not being watched.",
       "wetherselfquote": "She takes off her jeans and slowly peels her soaked  {0} panties down her dripping legs, holding them daintily between her thumb and forefinger.",
       "firstmtgquote": " greets you at the door.  She's wearing a pair of tight blue jeans and an even tighter black form-fitting t-shirt.",
